<resources>
    <string name="app_name">Speakuy</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="dont_have_account">Don\'t have account yet?</string>
    <string name="click_here">Click here</string>
    <string name="your_journey">Your Journey Starts Here</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="space">...</string>
    <string name="register">Register</string>
    <string name="lets_start">Let\'s Start Your Learning Journey</string>
    <string name="name">Name</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="top_rated">Top Rated Mentor</string>
    <string name="latest_info">Latest Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="message">Hello there, good evening..</string>
    <string name="title_matching">Matching</string>
    <string name="title_setting">Setting</string>
    <string name="quick_test">Let\'s do quick test</string>
    <string name="find_tutor">Let\'s find your tutor</string>
    <string name="notif">Notifications</string>
    <string name="theme">Theme</string>
    <string name="lang">Language</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="bookmark">Bookmark</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="i_agree">I agree to the terms of user and privacy policy</string>
    <string name="phone">Phone</string>
    <string name="test_page">Test Page</string>
    <string name="q1">What’s gender preference on your teacher?</string>
    <string name="q2">What level are you on speaking skill?</string>
    <string name="q3">What language you want to learn?</string>
    <string name="q4">What skill you want to improve?</string>
    <string name="desc">Professional Mentor</string>
    <string name="suggest">Suggestion...</string>
    <string name="submit">Submit</string>
    <string name="tidak_ada_data">The conversation with your mentor will appear here</string>
    <string name="error">Something\'s went wrong :( try again</string>
</resources>