<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.speakuy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.speakuy.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.speakuy.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/navigation_matching"
        android:name="com.speakuy.ui.matching.MatchingActivity"
        android:label="activity_matching"
        tools:layout="@layout/activity_matching" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.speakuy.ui.setting.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>