<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.matching.TestActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/questions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        tools:layout_editor_absoluteY="15dp" />

    <ScrollView
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="32dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Female" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Both" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="32dp"
                android:layout_below="@+id/q1">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/radioButtonx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Beginner" />

                    <RadioButton
                        android:id="@+id/radioButton2x"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Intermediate" />

                    <RadioButton
                        android:id="@+id/radioButtonx3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Expert" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="32dp"
                android:layout_below="@+id/q2">

                <TextView
                    android:id="@+id/textView22x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/radioButtonxx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="English" />

                    <RadioButton
                        android:id="@+id/radioButton2xx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Bahasa" />

                    <RadioButton
                        android:id="@+id/radioButtonx3x"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Korean" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="32dp"
                android:layout_below="@+id/q3">

                <TextView
                    android:id="@+id/textView22wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <RadioButton
                        android:id="@+id/radioButtonxwx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Speaking" />

                    <RadioButton
                        android:id="@+id/radioButton2xwx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Writing" />

                    <RadioButton
                        android:id="@+id/radioButtonx3wx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Listening" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btn_quest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/q4"
                android:layout_marginTop="32dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="Submit" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>